# pg-aws-lib

./: README.md  apply_pattern.py  main.py  metadata.json  pyproject.toml
_aws/: _awsredshift.py  awsasg.py  awsclient_config.py  awscloudformation.py  awscloudwatch.py  awscloudwatchlog.py  awsdynamodb.py  awsec2.py  awsiam.py  awskms.py  awslambda.py  awsrds.py  awsroute53.py  awss3.py  awssecretmanager.py  awsstepfunction.py  awstextract.py
_common/: _common.py
_config/: config.py  config.yaml
_connect/: _connect.py
_directive/: image_to_text.py  process_task.py  serialization.py  sqlformat.py
_engine/: _process_flow.py  _subprocess.py
_event/: _event.py
_example/: example_html
_igithub/: _github.py
_meta/: _meta.py
_pattern_template/: test.yaml  tubibricks_deployment_only.yaml  tubibricks_history_load_template.yaml
_pattern_template/_process_template/: _process_template.py
_pattern_template/template_v1/: model_history_load_template.py  tubibricks_deployment_only.py  tubibricks_table_creation.py
_search/: _semantic_search_faiss.py
_ui/: ui_tubibrick.py
_util/: _util_common.py  _util_directory.py  _util_file.py  _util_string.py
data/misc/: adserver_metric_daily.sql
data/subprocess/: data.json
task/: task_completion.py  test_rds.py
task/800000/: instruction.txt  jian_poc_model.py
task/801954/: adserver_metric_daily.py
task/analysis/: analysis.py
task/s3/: add_s3_bucket.py  create_presign_url.py  upload_file_s3.py
