[tool.poetry]
name = "pg-aws-lib"
version = "0.1.0"
description = ""
authors = ["Jian Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
boto3 = "^1.34.20"
pandas = "^2.1.4"
pygithub = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
